--- a/index.html
+++ b/index.html
@@ -329,9 +329,7 @@
                             <div class="number">01.</div>
                             <div class="content">
                                 <h4>Mobile Apps Development</h4>
-                                <p>Dignissimos ducimus blanditiis praesen</p>
                             </div>
-                            <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -339,9 +337,7 @@
                             <div class="number">02.</div>
                             <div class="content">
                                 <h4>Web Development</h4>
-                                <p>Dignissimos ducimus blanditiis praesen</p>
                             </div>
-                            <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -349,9 +345,7 @@
                             <div class="number">03.</div>
                             <div class="content">
                                 <h4>UI / UX Design</h4>
-                                <p>Dignissimos ducimus blanditiis praesen</p>
                             </div>
-                            <a href="service-details.html" class="details-btn"><i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -377,9 +371,9 @@
                                 <div class="section-title mb-40">
                                     <span class="sub-title mb-15">My Skills</span>
                                     <h2>Let’s Explore Popular <span>Skills & Experience</span></h2>
-                                    <p>Sed ut perspiciatis unde omnis iste natus to voluptatem accusantium doloremque laudantium, totam rem aperiamc eaque ipsa quae ab illo inventore veritatis</p>
+                                    <p>Previous tech skills I've utilized. Explore my proficiency in various technologies.</p>
                                 </div>
-                                <a href="about.html" class="theme-btn">Learn More <i class="far fa-angle-right"></i></a>
+                                <!-- <a href="about.html" class="theme-btn">Learn More <i class="far fa-angle-right"></i></a> -->
                             </div>
                         </div>
                         <div class="col-lg-7">
@@ -395,49 +389,43 @@
                                         <div class="skill-item wow fadeInUp delay-0-3s">
                                             <img src="assets/images/skills/js.png" alt="Skill" width="40%">
                                             <h5>Javascript</h5>
-                                            <span class="percent">83%</span>
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                         <div class="skill-item wow fadeInUp delay-0-5s">
                                             <img src="assets/images/skills/skill7.png" alt="Skill">
                                             <h5>Python</h5>
-                                            <span class="percent">84%</span>
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                         <div class="skill-item wow fadeInUp delay-0-4s">
                                             <img src="assets/images/skills/ts.png" alt="Skill" width="40%">
                                             <h5>TypeScript</h5>
-                                            <span class="percent">93%</span>
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                         <div class="skill-item wow fadeInUp delay-0-4s">
                                             <img src="assets/images/skills/swift.svg" alt="Skill" width="40%">
                                             <h5>Swift</h5>
-                                            <span class="percent">62%</span>
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                         <div class="skill-item wow fadeInUp delay-0-2s">
                                             <img src="assets/images/skills/mysql.png" alt="Skill" width="60%">
                                             <h5>MySql</h5>
-                                            <span class="percent">65%</span>
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                         <div class="skill-item wow fadeInUp delay-0-3s">
                                             <img src="assets/images/skills/docker.png" alt="Skill" width="51%">
                                             <h5>Docker</h5>
-                                            <span class="percent">86%</span>
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6">
                                         <div class="skill-item wow fadeInUp delay-0-5s">
                                             <img src="assets/images/skills/skill1.png" alt="Skill">
                                             <h5>Figma</h5>
-                                            <span class="percent">94%</span>
+                                            <!-- <span class="percent">94%</span> -->
                                         </div>
                                     </div>
                                 </div>
@@ -477,7 +465,7 @@
                     <div class="col-xl-5 col-lg-6">
                         <div class="project-content wow fadeInRight delay-0-2s">
                             <span class="sub-title">Mobile App</span>
-                            <h2><a href="https://play.google.com/store/apps/details?id=com.qatros.samakaki">Samakaki</a></h2>
+                            <h2><a href="samakaki-project-details.html">Samakaki</a></h2>
                             <p>Samakaki is a social media application designed to be family-friendly. It offers a unique feature of family lineage tracking, allowing users to explore and maintain their family history on a digital platform. Focused on providing a safe and inclusive experience, Samakaki aims to connect family members and strengthen familial bonds through the sharing of moments and stories, while also offering tools to understand and celebrate their heritage.</p>
                             <p>Tech Stack: Android(Kotlin), Firebase</p>
                             <a href="https://play.google.com/store/apps/details?id=com.qatros.samakaki" class="details-btn"><i class="far fa-arrow-right"></i></a>
@@ -493,10 +481,9 @@
                     <div class="col-xl-5 col-lg-6 ms-auto">
                         <div class="project-content wow fadeInRight delay-0-2s">
                             <span class="sub-title">Mobile App</span>
-                            <h2><a href="project-details.html">AgroDry</a></h2>
+                            <h2><a href="agrodry-project-details.html">AgroDry</a></h2>
                             <p>AgroDry is an application that utilizes Internet of Things (IoT) technology for monitoring and controlling temperature and humidity levels in drying equipment. This application is specifically designed for drying tobacco and various other farmer commodities. With AgroDry, farmers can easily set optimal drying conditions, enhancing the quality of their produce and reducing the risk of commodity damage. This application revolutionizes the agricultural industry by enabling better control over the drying process, thereby maximizing efficiency and productivity in farming.</p>
                             <p>Tech Stack: Android(Kotlin), Firebase</p>
-                            <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -509,25 +496,25 @@
                     <div class="col-xl-5 col-lg-6">
                         <div class="project-content wow fadeInRight delay-0-2s">
                             <span class="sub-title">Mobile App</span>
-                            <h2><a href="project-details.html">TravelKuy</a></h2>
-                            <p>TravelKuy is an application I developed to assist with travel preparation, particularly for hiking enthusiasts like myself. The idea originated from my passion for hiking, where I often found myself needing to check my gear to ensure nothing was left behind. With TravelKuy, I aimed to streamline the process of checking items efficiently. One of the key features of TravelKuy is its use of machine learning classification for item detection. This technology enables users to quickly identify and check off items from a list, simplifying the packing process.</p>
+                            <h2><a href="travelkuy-project-details.html">TravelKuy</a></h2>
+                            <p>TravelKuy is an application I developed to assist with travel preparation, particularly for hiking enthusiasts like myself. The idea originated from my passion for hiking, where I often found myself needing to check my gear to ensure nothing was left behind. With TravelKuy, I aimed to streamline the process of checking items efficiently.One of the key features of TravelKuy is its use of machine learning classification for item detection. This technology enables users to quickly identify and check off items from a list, simplifying the packing process.</p>
                             <p>Tech Stack: iOS(Swift), ML Core</p>
-                            <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="row align-items-center pb-25">
                     <div class="col-lg-6 order-lg-2">
                         <div class="project-image wow fadeInLeft delay-0-2s">
-                            <img src="assets/images/projects/project4.jpg" alt="Project">
+                            <img src="assets/images/projects/Transify.png" alt="Project">
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-6 ms-auto">
                         <div class="project-content wow fadeInRight delay-0-2s">
-                            <span class="sub-title">Product Design</span>
-                            <h2><a href="project-details.html">Mobile Application Development</a></h2>
-                            <p>Sed ut perspiciatis unde omnin natus totam rem aperiam eaque inventore veritatis architecto beatae</p>
-                            <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
+                            <span class="sub-title">Mobile App</span>
+                            <h2><a href="transify-project-details.html">Transify</a></h2>
+                            <p>Transify is an application specifically designed to convert voice into SIBI (Sistem Isyarat Bahasa Indonesia) sign language, facilitating communication for the deaf and those with hearing difficulties in Indonesia.</p>
+                            <p>Tech Stack: Android(Kotlin), NestJs, Docker</p>
+                            <!-- <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a> -->
                         </div>
                     </div>
                 </div>
