--- a/samakaki-project-details.html
+++ b/samakaki-project-details.html
@@ -65,32 +65,8 @@
 
                                 <div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
-                                        <li class="dropdown"><a href="#">Home</a>
-                                            <ul>
-                                                <li><a href="index.html">MultiPage</a></li>
-                                                <!-- <li><a href="indexonepage.html">OnePage</a></li> -->
-                                            </ul>
-                                        </li>
-                                        <!-- <li><a href="about.html">about</a></li>
-                                        <li><a href="services.html">services</a></li> -->
-                                        <li class="dropdown"><a href="#">projects</a>
-                                            <ul>
-                                                <li><a href="projects.html">project Grid</a></li>
-                                                <!-- <li><a href="projects-masonry.html">projects masonry</a></li>
-                                                <li><a href="project-details.html">projects details</a></li> -->
-                                            </ul>
-                                        </li>
-                                        <!-- <li class="dropdown"><a href="#">blog</a>
-                                            <ul>
-                                                <li><a href="blog.html">blog standard</a></li>
-                                                <li><a href="blog-details.html">blog details</a></li>
-                                            </ul>
-                                        </li> -->
-                                        <!-- <li class="dropdown"><a href="#">pages</a>
-                                            <ul>
-                                                <li><a href="404.html">Error Page</a></li>
-                                            </ul>
-                                        </li> -->
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="projects.html">Projects</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </div>
@@ -160,11 +136,11 @@
         <section class="page-banner-area pt-200 rpt-140 pb-100 rpb-60 rel z-1 text-center">
             <div class="container">
                 <div class="banner-inner text-white">
-                    <h1 class="page-title wow fadeInUp delay-0-2s">Mobile Application Design</h1>
+                    <h1 class="page-title wow fadeInUp delay-0-2s">SAMAKAKI</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center wow fadeInUp delay-0-4s">
                             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Mobile Application Design</li>
+                            <li class="breadcrumb-item active">Mobile App</li>
                         </ol>
                     </nav>
                 </div>
@@ -184,23 +160,21 @@
         <section class="projects-details-area pt-40 pb-130 rpb-100 rel z-1">
             <div class="container">
                 <div class="projects-details-image mb-50 wow fadeInUp delay-0-2s">
-                    <img src="assets/images/projects/project-details.jpg" alt="Project Details">
+                    <img src="assets/images/projects/Samakaki Banner.png" alt="Project Details">
                 </div>
                 <div class="row gap-120">
                     <div class="col-lg-8">
                         <div class="project-details-content wow fadeInUp delay-0-2s">
-                            <h3>We Create digital Product For Business</h3>
-                            <p class="big-letter">sSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque seeney laudantium totam rem aperiam eaque ipsa quae abillo inventore veritatis</p>
-                            <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aufugit sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam estqui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid consequature</p>
+                            <h3>Product Summary</h3>
+                            <p class="big-letter">Connect, Preserve, Celebrate: Samakaki, Where Family Stories Unfold!</p>
+                            <p>Samakaki is a social media application designed to be family-friendly. It offers a unique feature of family lineage tracking, allowing users to explore and maintain their family history on a digital platform. Focused on providing a safe and inclusive experience, Samakaki aims to connect family members and strengthen familial bonds through the sharing of moments and stories, while also offering tools to understand and celebrate their heritage.</p>
                             <ul class="list-style-one two-column mt-50 mb-40">
-                                <li>Branding & Design</li>
-                                <li>Digital Marketing</li>
-                                <li>Web Development</li>
-                                <li>Product Design</li>
-                                <li>Mobile Apps Design</li>
-                                <li>System & Guide</li>
-                                <li>Graphics Design</li>
-                                <li>Content Management</li>
+                                <li>Kotlin</li>
+                                <li>MVVM Architecture</li>
+                                <li>Room DB</li>
+                                <li>Retrofit</li>
+                                <li>Dependency Injection</li>
+                                <li>Firebase</li>
                             </ul>
                         </div>
                     </div>
@@ -208,24 +182,24 @@
                         <div class="project-details-info rmb-55" style="background-image: url(assets/images/projects/project-info-bg.png);">
                             <div class="pd-info-item">
                                 <span>Category</span>
-                                <h5>Product Design</h5>
+                                <h5>Android</h5>
                             </div>
                             <div class="pd-info-item">
                                 <span>Clients</span>
-                                <h5>X_Design Studio</h5>
+                                <h5>PT Qatros Teknologi Nusantara</h5>
                             </div>
                             <div class="pd-info-item">
-                                <span>Location</span>
-                                <h5>Melbourne, Australia</h5>
+                                <span>Position</span>
+                                <h5>Mobile Engineer</h5>
                             </div>
                             <div class="pd-info-item">
                                 <span>Published</span>
-                                <h5>September 25, 2023</h5>
+                                <h5>2022</h5>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row pb-15">
+                <!-- <div class="row pb-15">
                     <div class="col-lg-4 col-sm-6">
                         <div class="image mb-30 wow fadeInUp delay-0-2s">
                             <img src="assets/images/projects/project-middle1.jpg" alt="Project Middle">
@@ -241,12 +215,12 @@
                             <img src="assets/images/projects/project-middle3.jpg" alt="Project Middle">
                         </div>
                     </div>
-                </div>
-                <div class="project-bottom-content mb-50 wow fadeInUp delay-0-2s">
+                </div> -->
+                <!-- <div class="project-bottom-content mb-50 wow fadeInUp delay-0-2s">
                     <h3 class="title mb-25">Project Summery</h3>
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
-                </div>
-                <div class="tag-share py-30 wow fadeInUp delay-0-2s">
+                </div> -->
+                <!-- <div class="tag-share py-30 wow fadeInUp delay-0-2s">
                     <div class="item">
                         <b>Tags</b>
                         <div class="tag-coulds">
@@ -264,7 +238,7 @@
                             <a href="#"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="bg-lines">
                <span></span><span></span>
@@ -291,33 +265,33 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="project-item style-two wow fadeInUp delay-0-2s">
                             <div class="project-image before-after-none">
-                                <img src="assets/images/projects/related-project1.jpg" alt="Project">
+                                <img src="assets/images/projects/Transify - Related Project.png" alt="Project">
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Graphics Design</span>
-                                <h4><a href="project-details.html">Brand Identity Design</a></h4>
+                                <span class="sub-title">Mobile App</span>
+                                <h4><a href="transify-project-details.html">Transify</a></h4>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6">
                         <div class="project-item style-two wow fadeInUp delay-0-4s">
                             <div class="project-image before-after-none">
-                                <img src="assets/images/projects/related-project2.jpg" alt="Project">
+                                <img src="assets/images/projects/Agrodry - Related Project.png" alt="Project">
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Product Design</span>
-                                <h4><a href="project-details.html">Mobile Apps Design</a></h4>
+                                <span class="sub-title">Mobile App</span>
+                                <h4><a href="agrodry-project-details.html">Agrodry</a></h4>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6">
                         <div class="project-item style-two wow fadeInUp delay-0-6s">
                             <div class="project-image before-after-none">
-                                <img src="assets/images/projects/related-project3.jpg" alt="Project">
+                                <img src="assets/images/projects/TravelKuy - Related Project.png" alt="Project">
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Product Design</span>
-                                <h4><a href="project-details.html">Dashboard Development</a></h4>
+                                <span class="sub-title">Mobile App</span>
+                                <h4><a href="travelkuy-project-details.html">Travelkuy</a></h4>
                             </div>
                         </div>
                     </div>
@@ -350,17 +324,14 @@
                             <div class="footer-widget widget_nav_menu wow fadeInUp delay-0-4s">
                                 <h6 class="footer-title">Quick Link</h6>
                                 <ul>
-                                    <li><a href="services.html">Service</a></li>
                                     <li><a href="projects.html">Projects</a></li>
-                                    <li><a href="services.html#pricing">Pricing</a></li>
-                                    <li><a href="about.html#faqs">Faqs</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                             <div class="footer-widget widget_newsletter wow fadeInUp delay-0-4s">
                                 <form action="#">
-                                    <label for="email"><i class="far fa-envelope"></i></label>
-                                    <input id="email" type="email" placeholder="Email Address" required>
+                                    <label for="email-address"><i class="far fa-envelope"></i></label>
+                                    <input id="email-address" type="email" placeholder="Email Address" required>
                                     <button>Sign Up <i class="far fa-angle-right"></i></button>
                                 </form>
                             </div>
@@ -369,9 +340,8 @@
                             <div class="footer-widget widget_contact_info wow fadeInUp delay-0-6s">
                                 <h6 class="footer-title">Address</h6>
                                 <ul>
-                                    <li><i class="far fa-map-marker-alt"></i> 55 Main Street, 2nd block, New York City</li>
-                                    <li><i class="far fa-envelope"></i> <a href="mailto:support@gmail.com">support@gmail.com</a></li>
-                                    <li><i class="far fa-phone"></i> <a href="callto:+880(123)45688">+880 (123) 456 88</a></li>
+                                    <li><i class="far fa-map-marker-alt"></i> Universitas Negeri Yogyakarta, Yogyakarta</li>
+                                    <li><i class="far fa-envelope"></i> <a href="mailto:ikhwaninzaghi999@gmail.com">ikhwaninzaghi999@gmail.com</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -383,7 +353,7 @@
                    <div class="row">
                        <div class="col-lg-6">
                             <div class="copyright-text">
-                                <p>Copyright @2023, <a href="index.html">Noxfolio</a> All Rights Reserved</p>
+                                <p>Copyright @2024, <a href="index.html">Noxfolio</a> All Rights Reserved</p>
                             </div>
                        </div>
                        <div class="col-lg-6 text-lg-end">
