--- a/projects.html
+++ b/projects.html
@@ -136,21 +136,20 @@
         <section class="page-banner-area pt-200 rpt-140 pb-100 rpb-60 rel z-1 text-center">
             <div class="container">
                 <div class="banner-inner text-white">
-                    <h1 class="page-title wow fadeInUp delay-0-2s">Project Grid View</h1>
+                    <h1 class="page-title wow fadeInUp delay-0-2s">Projects</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center wow fadeInUp delay-0-4s">
                             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Project Grid View</li>
+                            <!-- <li class="breadcrumb-item active">Project Grid View</li> -->
                         </ol>
                     </nav>
                 </div>
             </div>
             <div class="bg-lines">
                <span></span><span></span>
+               <!-- <span></span><span></span>
                <span></span><span></span>
-               <span></span><span></span>
-               <span></span><span></span>
-               <span></span><span></span>
+               <span></span><span></span> -->
             </div>
         </section>
         <!-- Page Banner End -->
@@ -161,86 +160,63 @@
             <div class="container">
                <ul class="project-filter filter-btns-one justify-content-center pb-35 wow fadeInUp delay-0-2s">
                     <li data-filter="*" class="current">Show All</li>
-                    <li data-filter=".design">Design</li>
+                    <!-- <li data-filter=".design">Design</li>
                     <li data-filter=".branding">Branding</li>
                     <li data-filter=".marketing">Marketing</li>
                     <li data-filter=".development">Development</li>
                     <li data-filter=".apps">Mobile Apps</li>
-                    <li data-filter=".graphics">Graphics</li>
+                    <li data-filter=".graphics">Graphics</li> -->
                 </ul>
                 <div class="row project-masonry-active">
                     <div class="col-lg-6 item branding development">
                         <div class="project-item style-two wow fadeInUp delay-0-2s">
                             <div class="project-image">
-                                <img src="assets/images/projects/project1.jpg" alt="Project">
-                                <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
+                                <img src="assets/images/projects/Transify.png" alt="Project">
+                                <a href="transify-project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Product Design</span>
-                                <h3><a href="project-details.html">Mobile Application Design</a></h3>
+                                <span class="sub-title">Mobile App (Android)</span>
+                                <h3><a href="transify-project-details.html">Transify</a></h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 item design marketing graphics">
                         <div class="project-item style-two wow fadeInUp delay-0-4s">
                             <div class="project-image">
-                                <img src="assets/images/projects/project2.jpg" alt="Project">
-                                <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
+                                <img src="assets/images/projects/Samakaki.png" alt="Project">
+                                <a href="samakaki-project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Product Design</span>
-                                <h3><a href="project-details.html">Website Makeup Design</a></h3>
+                                <span class="sub-title">Mobile App (Android)</span>
+                                <h3><a href="samakaki-project-details.html">Samakaki</a></h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 item development graphics">
                         <div class="project-item style-two wow fadeInUp delay-0-2s">
                             <div class="project-image">
-                                <img src="assets/images/projects/project3.jpg" alt="Project">
-                                <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
+                                <img src="assets/images/projects/TravelKuy.png" alt="Project">
+                                <a href="travelkuy-project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Graphics Design</span>
-                                <h3><a href="project-details.html">Brand Identity and Motion Design</a></h3>
+                                <span class="sub-title">Mobile App (iOS)</span>
+                                <h3><a href="travelkuy-project-details.html">TravelKuy</a></h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 item design development apps">
                         <div class="project-item style-two wow fadeInUp delay-0-4s">
                             <div class="project-image">
-                                <img src="assets/images/projects/project4.jpg" alt="Project">
-                                <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
+                                <img src="assets/images/projects/AgroDry.png" alt="Project">
+                                <a href="agrodry-project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
                             </div>
                             <div class="project-content">
-                                <span class="sub-title">Product Design</span>
-                                <h3><a href="project-details.html">Mobile Application Design</a></h3>
+                                <span class="sub-title">Mobile App (Android)</span>
+                                <h3><a href="agrodry-project-details.html">AgroDry</a></h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 item branding marketing graphics">
-                        <div class="project-item style-two wow fadeInUp delay-0-2s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/project5.jpg" alt="Project">
-                                <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Design & Branding</span>
-                                <h3><a href="project-details.html">Creative Graphics Design</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 item design marketing apps">
-                        <div class="project-item style-two wow fadeInUp delay-0-4s">
-                            <div class="project-image">
-                                <img src="assets/images/projects/project6.jpg" alt="Project">
-                                <a href="project-details.html" class="details-btn"><i class="far fa-arrow-right"></i></a>
-                            </div>
-                            <div class="project-content">
-                                <span class="sub-title">Product Design</span>
-                                <h3><a href="project-details.html">Design & Branding Mokeup</a></h3>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div class="project-btn text-center wow fadeInUp delay-0-2s">
                     <a href="projects.html" class="theme-btn">View More Projects <i class="far fa-angle-right"></i></a>
@@ -273,17 +249,14 @@
                             <div class="footer-widget widget_nav_menu wow fadeInUp delay-0-4s">
                                 <h6 class="footer-title">Quick Link</h6>
                                 <ul>
-                                    <li><a href="services.html">Service</a></li>
                                     <li><a href="projects.html">Projects</a></li>
-                                    <li><a href="services.html#pricing">Pricing</a></li>
-                                    <li><a href="about.html#faqs">Faqs</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                             <div class="footer-widget widget_newsletter wow fadeInUp delay-0-4s">
                                 <form action="#">
-                                    <label for="email"><i class="far fa-envelope"></i></label>
-                                    <input id="email" type="email" placeholder="Email Address" required>
+                                    <label for="email-address"><i class="far fa-envelope"></i></label>
+                                    <input id="email-address" type="email" placeholder="Email Address" required>
                                     <button>Sign Up <i class="far fa-angle-right"></i></button>
                                 </form>
                             </div>
@@ -292,9 +265,8 @@
                             <div class="footer-widget widget_contact_info wow fadeInUp delay-0-6s">
                                 <h6 class="footer-title">Address</h6>
                                 <ul>
-                                    <li><i class="far fa-map-marker-alt"></i> 55 Main Street, 2nd block, New York City</li>
-                                    <li><i class="far fa-envelope"></i> <a href="mailto:support@gmail.com">support@gmail.com</a></li>
-                                    <li><i class="far fa-phone"></i> <a href="callto:+880(123)45688">+880 (123) 456 88</a></li>
+                                    <li><i class="far fa-map-marker-alt"></i> Universitas Negeri Yogyakarta, Yogyakarta</li>
+                                    <li><i class="far fa-envelope"></i> <a href="mailto:ikhwaninzaghi999@gmail.com">ikhwaninzaghi999@gmail.com</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -306,7 +278,7 @@
                    <div class="row">
                        <div class="col-lg-6">
                             <div class="copyright-text">
-                                <p>Copyright @2023, <a href="index.html">Noxfolio</a> All Rights Reserved</p>
+                                <p>Copyright @2024, <a href="index.html">Noxfolio</a> All Rights Reserved</p>
                             </div>
                        </div>
                        <div class="col-lg-6 text-lg-end">
