--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <p></p>
                             <div class="hero-btns">
                                 <a href="contact.html" class="theme-btn">Hire Me <i class="far fa-angle-right"></i></a>
-                                <a href="contact.html" class="read-more">Download Resume <i class="far fa-angle-right"></i></a>
+                                <a href="https://drive.google.com/file/d/1i_80FiSXAA0hDJAghikGZght7gqNHwTi/view?usp=sharing" class="read-more">Download Resume <i class="far fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
